Adicionando melhorias ao códigos dos arquivos HTML, JS e CSS, e atualizando o arquivo README.MD

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </section>
 
     <section class="feature-timeline">
-      <h2>Maintain a consistent posting schedule.</h2>
+      <h2><span style="font-weight: 700;">AQUI ESTÁ</span>  | Maintain a consistent posting schedule.</h2>
       <div class="image">
         <img loading="lazy" src="./src/images/illustration-consistent-schedule.webp" aria-hidden="true">
       </div>
